--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </main>
   <footer>
     <p><a href="https://www.google.com/search?q=quantos+graus+est%C3%A1+Lages&sca_esv=74094a796f7da13a&sxsrf=AE3TifNpbZYr7nxNpLSxIw2OMLhBqmRYDQ%3A1750102472734&ei=yHFQaIzMLKvb5OUP-sm9aQ&ved=0ahUKEwiM0NTh1_aNAxWrLbkGHfpkLw0Q4dUDCBA&uact=5&oq=quantos+graus+est%C3%A1+Lages&gs_lp=Egxnd3Mtd2l6LXNlcnAiGXF1YW50b3MgZ3JhdXMgZXN0w6EgTGFnZXMyBxAjGLADGCcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEdIwQRQAFgAcAF4AZABAJgBAKABAKoBALgBA8gBAJgCAaACBZgDAIgGAZAGCZIHATGgBwCyBwC4BwDCBwMyLTHIBwQ&sclient=gws-wiz-serp" target="_blank">Veja a previsão Completa</a></p>
-    <p>Escrito por <a href="https://www.github.com" target="_blank">Guilherme da Silva Vieira</a></p>
+    <p>Escrito por <a href="https://github.com/guilherme-da-silva-vieira/Temperatura_Serrana/" target="_blank">Guilherme da Silva Vieira</a></p>
   </footer>
   <script defer>
     var temperaturaMaxima;//temperatura maxima decimal
@@ -68,7 +68,7 @@
 	    //obtendo as temperaturas minimas e máximas
 	    temperaturaMaxima = data.daily.temperature_2m_max[0];//temperatura máxima de hoje
 	    console.log(temperaturaMaxima);
-	    temperaturaMinima = data.daily.temperature_2m_min[0];//temperatura mínima de hoje]
+	    temperaturaMinima = data.daily.temperature_2m_min[0];//temperatura mínima de hoje
 	    console.log(temperaturaMinima);
 
 	    //temperatura arredondada
