ajustes no index e readme

--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@ SOFTWARE.
   </main>
   <footer>
     <p><a href="https://www.google.com/search?q=quantos+graus+est%C3%A1+Lages&sca_esv=74094a796f7da13a&sxsrf=AE3TifNpbZYr7nxNpLSxIw2OMLhBqmRYDQ%3A1750102472734&ei=yHFQaIzMLKvb5OUP-sm9aQ&ved=0ahUKEwiM0NTh1_aNAxWrLbkGHfpkLw0Q4dUDCBA&uact=5&oq=quantos+graus+est%C3%A1+Lages&gs_lp=Egxnd3Mtd2l6LXNlcnAiGXF1YW50b3MgZ3JhdXMgZXN0w6EgTGFnZXMyBxAjGLADGCcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEdIwQRQAFgAcAF4AZABAJgBAKABAKoBALgBA8gBAJgCAaACBZgDAIgGAZAGCZIHATGgBwCyBwC4BwDCBwMyLTHIBwQ&sclient=gws-wiz-serp" target="_blank">Veja a previsão Completa</a></p>
-    <p>Escrito por <a href="https://github.com/guilherme-da-silva-vieira/Temperatura_Serrana/" target="_blank">Guilherme da Silva Vieira</a></p>
+    <p><a href="https://github.com/guilherme-da-silva-vieira/Temperatura_Serrana/" target="_blank">Acessar Código-Fonte</a></p>
   </footer>
   <script defer>
     var temperaturaMaxima;//temperatura maxima decimal
     var temperaturaMinima;//temperatura minima decimal
-    var temperaturaMaxString;
-    var temperaturaMinString;
-    var spanMax;// acessando a tag span com o id "max"
-    var spanMin;// acesso da tag span com o id "min"
+    var spanMax;// acessando a tag span com o id "maximo"
+    var spanMin;// acesso da tag span com o id "minimo"
     var acessarAPI;//armazena a url da api da temperatura
     var visualizar;// vai fazer a requisição com os dados JSON
     
