--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ SOFTWARE.
   <style>
     body{
 	text-align:center;
-	background-color:#000;
+	background-color:rgba(0,0,0,0.40);
 	font-family:arial;
     }
     h1{
@@ -53,6 +53,9 @@ SOFTWARE.
     a:hover{
 	text-decoration:underline;
     }
+    .easteregg{
+    	color:rgba(0,0,0,0.2);
+    }
   </style>
 </head>
 <body>
@@ -66,7 +69,7 @@ SOFTWARE.
   </main>
   <footer>
     <p><a href="https://www.google.com/search?q=quantos+graus+est%C3%A1+Lages&sca_esv=74094a796f7da13a&sxsrf=AE3TifNpbZYr7nxNpLSxIw2OMLhBqmRYDQ%3A1750102472734&ei=yHFQaIzMLKvb5OUP-sm9aQ&ved=0ahUKEwiM0NTh1_aNAxWrLbkGHfpkLw0Q4dUDCBA&uact=5&oq=quantos+graus+est%C3%A1+Lages&gs_lp=Egxnd3Mtd2l6LXNlcnAiGXF1YW50b3MgZ3JhdXMgZXN0w6EgTGFnZXMyBxAjGLADGCcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEcyChAAGLADGNYEGEdIwQRQAFgAcAF4AZABAJgBAKABAKoBALgBA8gBAJgCAaACBZgDAIgGAZAGCZIHATGgBwCyBwC4BwDCBwMyLTHIBwQ&sclient=gws-wiz-serp" target="_blank">Veja a previsão Completa</a></p>
-    <p><a href="https://github.com/guilherme-da-silva-vieira/Temperatura_Serrana/" target="_blank">Acessar Código-Fonte</a></p>
+    <p><a href="https://guilherme-da-silva-vieira.github.io/projetos/2025/web/temperatura/temperatura.html" target="_blank" class="easteregg">:)</a></p>
   </footer>
   <script defer>
     var temperaturaMaxima;//temperatura maxima decimal
